--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.custom-shape-divider-bottom-1683386854 {
+.custom-shape-divider-bottom-1683403173 {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -12,13 +12,13 @@
     transform: rotate(180deg);
 }
 
-.custom-shape-divider-bottom-1683386854 svg {
+.custom-shape-divider-bottom-1683403173 svg {
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
-    height: 79px;
+    height: 64px;
 }
 
-.custom-shape-divider-bottom-1683386854 .shape-fill {
-    fill: #FFFFFF;
+.custom-shape-divider-bottom-1683403173 .shape-fill {
+    fill: rgb(17 24 39);
 }
